# EPKBS

./: .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  PROJECT_RESTRUCTURE_PLAN.md  README.md  demo_document_parsing.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_document_parsing.txt  函数技术文档.md
config/: langgraph_settings.py  mcp_settings.py  nginx.conf  settings.py
docs/: AGENT_ARCHITECTURE_UPDATE.md  MODEL_CONFIG.md  QUICK_START.md  README.md
docs/architecture/: document_processing.md  langgraph_migration.md  mcp_implementation.md  vector_storage.md
docs/guides/: document_parsing.md
examples/: README.md
examples/advanced/: langgraph_showcase.py  mcp_usage.py
scripts/: check_system.py  init_db.sql  upgrade_to_qwen3.py  verify_deployment.sh
scripts/deployment/: deploy.sh  start_services.py
scripts/development/: dev_start.sh  test_system.py
scripts/maintenance/: clean_project.py
scripts/setup/: activate_environment.sh  check_environment.py  start_database.sh
src/: __init__.py
src/agent/: __init__.py  core.py  langgraph_agent.py  langgraph_states.py  llm.py  mcp_agent.py  nodes.py  react_agent.py  states.py  tools.py  unified_agent.py  workflows.py
src/api/: __init__.py  app.py  auth.py  database.py  models.py
src/api/routes/: __init__.py  auth.py  chat.py  search.py
src/data/: __init__.py  document_validator.py  embeddings.py  loaders.py  pipeline.py  splitters.py
src/data/parsers/: __init__.py  base.py  chunker.py  cleaner.py  error_handler.py  image_parser.py  integrator.py  office_parser.py  pdf_parser.py  special_parser.py  text_parser.py
src/epkbs_mcp/clients/: mcp_client.py
src/epkbs_mcp/servers/: __init__.py  document_parsing_server.py  table_extraction_server.py
src/epkbs_mcp/types/: base.py  responses.py  tools.py
src/frontend/: __init__.py  app.py
src/frontend/components/: __init__.py  auth.py  chat.py  documents.py  search.py  sidebar.py
src/frontend/utils/: __init__.py  api_client.py  session.py
src/mcp/: __init__.py  server_manager.py
src/mcp/clients/: __init__.py
src/mcp/servers/: rag_server.py
src/mcp/types/: __init__.py
src/rag/: __init__.py  core.py  rerankers.py  retrievers.py  vector_store.py
src/utils/: __init__.py  async_utils.py  cache_manager.py  helpers.py  logger.py  model_manager.py
tests/: test_data_pipeline.py
tests/integration/: test_langgraph_integration.py  test_mcp_implementation.py
tests/unit/: test_document_parsing.py
